[tool.poetry]
name = "rf-survey"
version = "0.1.0"
description = ""
authors = ["Patarimi <38954040+Patarimi@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poe.tasks]
prep = "python ./processing/data_preparation.py"
run = "streamlit run streamlit_app.py"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
openpyxl = "^3.1.2"
pydantic = "^2.10.3"
scipy = "^1.14.1"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
poethepoet = "^0.31.1"
scikit-learn = "^1.6.0"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
